<resources>
    <string name="app_name">Consumer App</string>
    <string name="search">Search</string>
    <string name="search_hint">Cari user</string>
    <string name="name_place">Nama</string>
    <string name="username_place">\@username</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="title_activity_user_details">UserDetails</string>
    <string name="following">Following(s)</string>
    <string name="followers">Follower(s)</string>
    <string name="content_tab_text">Ini adalah Tab</string>
    <string name="no_data">Tidak ada data.</string>
    <string name="user_not_found">User tidak ditemukan.</string>
    <string name="fav_list">List Favorit</string>
    <string name="settings">Pengaturan</string>
    <string name="key_alarm_preference">alarm_preference</string>
    <string name="pref_title">Reminder pada pukul 9.00</string>
    <string name="set_fav">Favoritkan</string>
</resources>